@@ -26,6 +26,7 @@
     <File name="ReplaceIncompleteOddnessCheckRule.cs" subtype="Code" buildaction="Compile" />
     <File name="ObsoleteMessagesShouldNotBeEmptyRule.cs" subtype="Code" buildaction="Compile" />
     <File name="AvoidVisibleConstantFieldRule.cs" subtype="Code" buildaction="Compile" />
+    <File name="AvoidCallingProblematicMethodsRule.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Project" localcopy="True" refto="framework" />
